# apps/api/src/app.module.ts
@@ -5,6 +5,7 @@ import { AdminDashboardModule } from "./admin-dashboard/admin-dashboard.module.j
 import { AppController } from "./app.controller.js";
 import { AppService } from "./app.service.js";
 import { AuthModule } from "./auth/auth.module.js";
+import { CandidateDashboardModule } from "./candidate/candidate-dashboard.module.js";
 import { OrganizationModule } from "./organization/organization.module.js";
 import { PublicModule } from "./public/public.module.js";
 
@@ -14,6 +15,7 @@ import { PublicModule } from "./public/public.module.js";
     AdminContentModule,
     AdminDashboardModule,
     AuthModule,
+    CandidateDashboardModule,
     OrganizationModule,
     PublicModule
   ],
